--- a/.github/workflows/main_cotam.yml
+++ b/.github/workflows/main_cotam.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - main
   workflow_dispatch:
+  
+env:
+  PROJECT_PATH: 'CoTamApp/CoTamApp.csproj'
+  PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
+  NUGET_SOURCE_URL: 'https://ap i.nuget.org/v3/index.json'
 
 jobs:
   build:
@@ -21,9 +26,27 @@ jobs:
         with:
           dotnet-version: '6.0.x'
           include-prerelease: true
+          
+      - name: swagger ui
+        # You may pin to the exact commit or the version.
+        # uses: pjoc-team/swagger-ui-action@7e646ed552cf7e47c4cf92ca39db364826623dad
+        uses: pjoc-team/swagger-ui-action@v0.0.2
+        # with:
+          # Dir to find swagger json
+          # dir: # default is ./
+          # Pattern to find json, for example: *.swagger.json
+          # pattern: # default is *.json
+          # Debug output
+          # debug: # optional, default is 
+          
+      - name: 'Pack project'
+        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
+
+      - name: 'Push package'
+        run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg -k ${{ secrets.NUGET_AUTH_TOKEN }} -s ${{ env.NUGET_SOURCE_URL }}
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
