--- a/.github/workflows/main_cotam.yml
+++ b/.github/workflows/main_cotam.yml
@@ -1,28 +1,20 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Co Tam Project | © 2022 by fptu-team-404-not-found
+name: Build and deploy ASP.Net Core app to Azure Web App - cotam
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-
-env:
-  PROJECT_PATH: 'CoTamApp/CoTamApp.csproj'
-  PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
-  NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-      - name: Check-out repository 
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
@@ -30,19 +22,10 @@ jobs:
           dotnet-version: '6.0.x'
           include-prerelease: true
 
-      - name: 'Restore packages'
-        run: dotnet restore ${{ env.PROJECT_PATH }}
-
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-      - name: 'Pack project'
-        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
-
-      - name: 'Push package'
-        run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg -k ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9F6F99D67AD643D69F2041E2CC75F4EC }} -s ${{ env.NUGET_SOURCE_URL }}
-
-      - name: Dotnet publish
+      - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
