Dat: Login with google admin & manager account

--- a/CoTamApp/appsettings.json
+++ b/CoTamApp/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=fptu-team-404notfound.database.windows.net;Database=cotam;Uid=admin404;password=1234567890@Bb"
+  },
+  "AppSettings": {
+    "Token": "Unknown Secret Key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
