--- a/.github/workflows/main_cotam.yml
+++ b/.github/workflows/main_cotam.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Co Tam Project | © 2022 by fptu-team-404-not-found
 
 on:
@@ -10,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+    types: [closed]
 
 jobs:
   build:
