[tienhuynh-tn] Init API standard format & project restructuring

--- a/CoTamApp/CoTamApp.csproj
+++ b/CoTamApp/CoTamApp.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>21d707f5-73e6-4f26-89f2-968f367276ad</UserSecretsId>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
